2008-12-03  Esteban Sanchez  <estebans@artica.es>

	* bin/PandoraAgent.exe: Updated to last commit.

2008-12-03  Esteban Sanchez  <estebans@artica.es>

	* pandora.[cc,h]: Function is_enabled() was moved here to be
	accesible.

	* pandora_windows_service.cc: Removed is_enabled() private function.

	* windows_service.cc: Service is now interactive, so it can open
	interactive processes in the watchdog mode of proc modules.

	* modules/pandora_module_factory.cc: Added "module_watchdog" and
	"module_start_command" tokens to service and process modules. Style
	correction.

	* modules/pandora_module_proc.[cc,h]: Added watchdog mode to run
	proccess when they die. It's done by setting a start command to
	recover it.

	* modules/pandora_module_service.[cc,h]: Added watchdog mode to start
	a service when it's stopped.

2008-12-01  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc,
	  windows/pandora_wmi.h,
	  modules/pandora_module_logevent.cc,
	  modules/pandora_module_logevent.h,
	  modules/pandora_module_factory.cc: Added event code filtering
	  support to logevent module.

2008-12-01  Esteban Sanchez  <estebans@artica.es>

	* pandora_windows_service.cc: Removed debug output. Release mutex on
	sendXml()
	
	* modules/pandora_module.[cc,h]: Save latest output in a new property.
	It's used on generic_proc modules to check the value better.

	* modules/pandora_module_proc.[cc,h]: Added support for asynchronous
	mode. It checks process in a separeted thread and report the status
	quicker. Added getProcessName()

	* modules/pandora_module_service.cc: Style correction. Removed an
	indentation level.

	* windows/pandora_windows_info.[cc,h]: Added getProcessHandles() to
	get a list of handles of a running process, giving the process name.

2008-11-28  Esteban Sanchez  <estebans@artica.es>

	* modules/pandora_module.[cc,h]: Added an async property. Added
	getLatestOutput() to get the latest output of a module.
